--- a/application.properties
+++ b/application.properties
@@ -2,10 +2,15 @@
 message = Hi Friends , I am javeed.
 
 
-spring.datasource.url= jdbc:mysql://localhost:3306/wipro_db
-spring.datasource.username= root
-spring.datasource.password= admin
-spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+#spring.datasource.url= jdbc:mysql://localhost:3306/wipro_db
+#spring.datasource.username= root
+#spring.datasource.password= admin
+#spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+
+
+spring.datasource.url= jdbc:h2:mem:mydb
+
+spring.h2.console.enabled= true
 
 
 spring.jpa.hibernate.ddl-auto= update
